style.css
body {
  margin: 0;
  font-family: Arial, sans-serif;
}

.navbar {
  background-color: #ffffff;
  display: flex;
  justify-content: flex-start;
  padding: 2rem;
  align-items: center;
  gap: 5rem;
  border-bottom: 2px solid #8e8e8e;
}

.logo {
  color: rgb(126, 126, 126);
  font-size: 1.5rem;
  font-weight: bold;
}

.nav-links {
  list-style: none;
  display: flex;
  gap: 5rem;
  margin: 0;
  padding: 0;
}

.nav-links a {
  color: rgb(126, 126, 126);
  text-decoration: none;
  transition: color 0.3s ease;
}

.nav-links a:hover {
  color: rgb(57, 57, 57);
}

.main {
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
  align-items: center;
  padding: 3rem
}

.photo-frame {
  border: 5px solid rgb(176, 176, 176);
  width: fit-content
}

.photo {
  height: 25rem;
  display: block;
}

.intro-text {
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
  align-items: center;
  width: 40rem;
}

.intro-text-main {
  color: #8e8e8e;
}

.intro-text-body{

  font-size: 1rem;
  color: rgb(85, 85, 85) 
}

